kubernetes_deployment_config/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publicip-ingress
  namespace: go-app
  labels:
    name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://goapp.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "1728000"
spec:
  rules:
  - host: "goapp.local"  # or use any valid subdomain like "example.local"
    http:
      paths:

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
      
      - pathType: Prefix
        path: "/map"
        backend:
          service:
            name: backend-service
            port: 
              number: 8082

      - pathType: Prefix
        path: "/account"
        backend:
          service:
            name: backend-service
            port: 
              number: 8082
